# differentiable-physics-wgpu

./: .gitignore  .gitmodules  AGENTS.md  BUGFIX_SUMMARY.md  BUG_FIXES.md  CI_FIXES_SUMMARY.md  CI_README.md  CLAUDE.md  CUSTOM_OP_README.md  Cargo.toml  Makefile  README  README.md  TEST_HELL_README.md  TEST_SUMMARY.md  ci  ci.py  debug_broadphase.py  debug_contact.py  debug_contact_detection.py  debug_contacts.py  debug_friction.py  debug_friction_detailed.py  debug_geometry.py  debug_hybrid.py  debug_lambda.py  debug_narrowphase.py  debug_normal_direction.py  debug_solver_iterations.py  debug_solver_lambda.py  debug_velocity_solver.py  environment.yml  libphysics.dylib  oracle_dump.npy  pc-bench  pc-demo  pc-test  physics_core  physics_demo.py  physics_extension.py  (+21 more)
RENDERER OLD REFERENCE/: body.rs  gpu.rs  lib.rs
RENDERER OLD REFERENCE/physics/: buffer_manager.rs  compute_executor.rs  gpu_pipeline.rs  simulation_parameters.rs
RENDERER OLD REFERENCE/shaders/: broadphase.wgsl  broadphase_simple.wgsl  mod.rs  (+5 more)
artifacts/: final_state_test.npy  initial_state.npy  naive_sim_200steps_1751285474.npy  naive_sim_200steps_1751285492.npy  oracle_dump.npy  oracle_dump_all_frames.npy  simulation_420.npy  test_100.npy  test_420.npy  test_nstep_100.npy  trajectory_2025-07-03_11-01-47.npy  trajectory_2025-07-03_11-21-07.npy  trajectory_2025-07-03_11-39-52.npy  trajectory_2025-07-03_12-05-59.npy  trajectory_2025-07-03_14-07-19.npy  trajectory_2025-07-03_14-20-42.npy  trajectory_2025-07-03_14-34-15.npy
benches/: thruput.rs
custom_ops/: __init__.py
docs/: AGENTS.md  BROADPHASE_IMPROVEMENTS.md  PROPOSED_STRUCTURE.md  TEST_HELL.md  memory_layout.md
physics/: README.md  __init__.py  broadphase.py  broadphase_tensor.py  engine.py  engine_c.py  integration.py  main.py  math_utils.py  narrowphase.py  solver.py  solver_debug.py  solver_debug2.py  solver_debug3.py  solver_trace.py  types.py
renderer/: Cargo.toml  README.md
renderer/src/: body.rs  camera.rs  gpu.rs  lib.rs  loader.rs  main.rs  mesh.rs  video.rs
renderer/src/shaders/: sdf.wgsl  wireframe.wgsl
renderer/tests/: body_tests.rs  camera_tests.rs  integration_tests.rs  loader_tests.rs  mesh_tests.rs  mod.rs  shader_tests.rs  video_tests.rs
scripts/: cli_parser.py  config.py  create_default_scene.py  error_handler.py  file_operations.py  output_handler.py  renderer.py  run_physics.py  run_simulation.py  run_test_hell.py  scene_builder.py  test_advanced_collisions.py  test_simple_collision.py  update_preview.sh
src/: body.rs  contact.rs  cpu_ref.rs  gpu.rs  lib.rs  main.rs  physics.rs  test_sim_params.rs  viz.rs
tests/: README.md  TEST_OVERVIEW.md  conftest.py  create_test_dump.py  debug_bounce.py  debug_broadphase.py  debug_collision_detailed.py  debug_direct_calc.py  debug_impulse_count.py  debug_no_jit.py  debug_viz_implementation_summary.md  debug_why_no_collision.py  final_test_summary.py  oracle_dump.npy  overview.md  plot_energy.py  reference.py  reference_refactored.py  reference_simple.py  requirements.txt  run_all_tests.py  run_all_tests.sh  run_ci.py  step.npy  test_all_debug_tools.py  test_angular_terms.py  test_bounce_basic.py  test_bounce_debug.py  test_bounce_fix.py  test_bounce_physics.py  test_bounce_physics_multi.py  test_broadphase.py  test_broadphase_debug.py  test_broadphase_sap.py  test_collision_dispatcher.py  test_contact_solver.py  test_contact_solver_gpu.py  test_debug_viz_modes.sh  test_double_contact.py  test_dynamics.py  (+34 more)
(+224 files in other folders)
