[workspace]
resolver = "2"
members = [
    ".",
]

[package]
name = "physics_core"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23.0"
pollster = "0.4"
env_logger = "0.11"
bytemuck = { version = "1.19", features = ["derive"] }
winit = { version = "0.30", optional = true }
futures = "0.3"
glam = { version = "0.29", optional = true }

[lib]
name = "physics_core"
path = "src/lib.rs"

[features]
default = []
viz = ["dep:winit", "dep:glam"]
all = ["viz"]

[[bench]]
name = "thruput"
harness = false

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "test_contact_solver"
path = "src/bin/test_contact_solver.rs"

[[bin]]
name = "test_viz_triangle"
path = "src/bin/test_viz_triangle.rs"
required-features = ["viz"]

[[bin]]
name = "test_viz_debug_vertices"
path = "src/bin/test_viz_debug_vertices.rs"
required-features = ["viz"]

[[bin]]
name = "test_viz_pipeline"
path = "src/bin/test_viz_pipeline.rs"
required-features = ["viz"]

[[bin]]
name = "test_matrix_debug"
path = "src/bin/test_matrix_debug.rs"
required-features = ["viz"]

[[bin]]
name = "test_viz_simple"
path = "src/bin/test_viz_simple.rs"
required-features = ["viz"]

[[bin]]
name = "demo_viz"
path = "src/bin/demo_viz.rs"
required-features = ["viz"]

[[bin]]
name = "test_viz_debug"
path = "src/bin/test_viz_debug.rs"
required-features = ["viz"]

[[bin]]
name = "test_wireframe_direct"
path = "src/bin/test_wireframe_direct.rs"
required-features = ["viz"]
