[workspace]
resolver = "2"
members = [
    ".",
]

[package]
name = "physics_core"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "25.0.0"
pollster = "0.3.0"
env_logger = "0.11.3"
bytemuck = { version = "1.16.0", features = ["derive"] }
winit = { version = "0.30.0", optional = true }
futures = "0.3"
glam = { version = "0.28.0", optional = true }
clap = { version = "4.5.4", features = ["derive"], optional = true }
npy = { version = "0.4", optional = true }
npyz = "0.8.4"
anyhow = "1.0.86"

[lib]
name = "physics_core"
path = "src/lib.rs"

[features]
default = []
viz = ["dep:winit", "dep:glam", "dep:clap", "dep:npy"]
all = ["viz"]

[[bench]]
name = "thruput"
harness = false

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "test_contact_solver"
path = "src/bin/test_contact_solver.rs"


[[bin]]
name = "demo_viz"
path = "src/bin/demo_viz.rs"
required-features = ["viz"]


[[bin]]
name = "debug_viz"
path = "src/bin/debug_viz.rs"
required-features = ["viz"]

